[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cyberwave-edge-d500-lidar-driver"
version = "0.1.0"
description = "A driver for the Waveshare D500 kit aka LDRobot LD19 Lidar DTOF sensor"
requires-python = ">=3.11"
dependencies = [
    "cyberwave-sdk>=0.1.0",
]
authors = [
    {name = "Sam Wilcock"},
]

[project.scripts]
driver = "cyberwave_edge_d500_lidar_driver.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyberwave_edge_d500_lidar_driver*"]
